# Booster-Gripper

./: README.md  package.xml  setup.cfg  setup.py
booster_gripper/: gripper_main.py
booster_gripper/node/: gripper_node.py
booster_gripper/process/: gripper_process.py
example/: gripper.py  teach_play.py
rs05_motor/: bit_convert.py  communicate.py  core.py
src/rs05_motor/: __init__.py  conversion.py  core.py
test/: validation.py
