<?xml version="1.0"?>
<package format="3">

  <name>booster_gripper</name>
  <version>0.0.1</version>

  <description>Booster gripper controller</description>

  <maintainer email="riyanfadli675@gmail.com">
    riyan
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>booster_joint_interface</depend>

  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>